--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,6 +13,8 @@ node {
    
             stage('Test') {
                 echo 'Testing....'
+                echo 'Installing pip into job workspace ...'
+                sh 'sudo apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
                 sh 'pip2 install ansible-lint'
                 echo 'Testing ...'
