--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,7 +16,7 @@ node {
                 echo 'Installing pip into job workspace ...'
                 sh 'apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
-                sh 'sudo pip2 install ansible-lint'
+                sh 'sodu pip2 install ansible-lint'
                 echo 'Testing ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint  /ansible'
