--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,9 @@
 node {
 
+            stage('Prep')
+            {
+                        
+            }
             stage('Build') {
                     echo 'SCM....'
                     git credentialsId: 'tom.halpin@dxc.com', url: 'https://github.com/tom-halpin/AnsibleCICD'
@@ -16,7 +20,7 @@ node {
                 echo 'Installing pip into job workspace ...'
                 sh 'apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
-                sh 'sodu pip2 install ansible-lint'
+                sh 'sudo pip2 install ansible-lint'
                 echo 'Testing ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint  /ansible'
