--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,8 +17,9 @@ node {
    
             stage('Test') {
                 echo 'Testing....'
+                sh 'rm /var/lib/dpkg/lock'
                 echo 'Installing pip into job workspace ...'
-                sh 'apt-get install python-pip'
+                sh 'sudo apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
                 sh 'sudo pip2 install ansible-lint'
                 echo 'Testing ...'
