--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,12 +16,14 @@ node {
                 }
    
             stage('Test') {
-                echo 'Testing....'
+                echo 'Testing'....'
+                echo 'USER root'
                 echo 'Installing pip into job workspace ...'
-                sh '/usr/bin/sudo apt-get install python-pip'
+                sh 'apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
-                sh '/usr/bin/sudo pip2 install ansible-lint'
-                echo 'Testing ...'
+                sh 'pip2 install ansible-lint'
+                echo 'USER jenkins'
+                echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint  /ansible'
             }
