--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,10 +17,10 @@ node {
    
             stage('Test') {
                 echo 'Testing....'
-                echo 'Installing pip into job workspace ...'
+                /*echo 'Installing pip into job workspace ...'
                 sh 'sudo apt-get install python-pip'
                 echo 'Installing ansible-lint into job workspace ...'
-                sh 'sudo pip2 install ansible-lint'
+                sh 'sudo pip2 install ansible-lint'*/
                 echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint  /ansible'
