--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,21 +9,13 @@ node {
                     git credentialsId: 'tom.halpin@dxc.com', url: 'https://github.com/tom-halpin/AnsibleCICD'
 
                     echo 'Building....'
-
-                   //bat '"C:\\Program Files\\Git\\usr\\bin\\ssh.exe" liuning0820@13.75.117.74 mv *.* /mnt/DockerDemoASPNetCore/ '
-                    
-
                 }
    
             stage('Test') {
                 echo 'Testing....'
-                /*echo 'Installing pip into job workspace ...'
-                sh 'sudo apt-get install python-pip'
-                echo 'Installing ansible-lint into job workspace ...'
-                sh 'sudo pip2 install ansible-lint'*/
                 echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
-                sh 'ansible-lint  /ansible'
+                sh 'ansible-lint ansible'
             }
             stage('Deploy') {
                 echo 'Deploying....'
