--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,12 +11,15 @@ node {
                     echo 'Building....'
                 }
    
-            stage('Test') {
-                echo 'Testing....'
+            stage('Ansible Lint') {
                 echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint ansible'
             }
+            stage ("Molecule Lint") {
+               echo 'Running Molecule Lint ...'
+                  sh 'molecule lint'
+        }
             stage('Deploy') {
                 echo 'Deploying....'
             }
