--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,7 +10,11 @@ node {
 
                     echo 'Building....'
                 }
-   
+            stage('Ansible Syntax Checker') {
+                echo 'Running ansible-lint ...'
+                //command to run ansible-playbook in syntax checker mode the parameter required is the path where the playbooks are stored
+                sh 'ansible-playbook --syntax-check ansible/*.yml'
+            }            
             stage('Ansible Lint') {
                 echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
