--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ node {
             stage('Ansible Lint') {
                 echo 'Running ansible-lint ...'
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
-                sh 'ansible-lint ansible'
+                sh 'ansible-lint ansible/*.yml'
             }
             stage('YAML Lint') {
                 echo 'Running yamllint ...'
