--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,11 +20,11 @@ node {
                 //command to run ansible-lint the parameter required is the path where the playbooks are stored
                 sh 'ansible-lint ansible/*.yml'
             }
-            stage('YAML Lint') {
+            /*stage('YAML Lint') {
                 echo 'Running yamllint ...'
                 //command to run yamllint the parameter required is the path where the playbooks are stored
                 sh 'yamllint cft/*.*'
-            }            
+            }*/       
             /*stage ("Molecule Lint") {
                echo 'Running Molecule Lint ...'
                   sh 'molecule lint'
