--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -72,11 +72,5 @@ def notifyBuild(String buildStatus = 'STARTED') {
   }
 
   // Send notifications
-  slackSend (color: colorCode, message: summary)
-
-  emailext(
-      subject: subject,
-      body: details,
-      recipientProviders: [[$class: 'DevelopersRecipientProvider']]
-    )
+  slackSend (color: colorCode, message: summary, channel: serviceagent)
 }
