--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -72,5 +72,5 @@ def notifyBuild(String buildStatus = 'STARTED') {
   }
 
   // Send notifications
-  slackSend (color: colorCode, message: summary, channel: serviceagent)
+  slackSend (color: colorCode, message: summary, channel: 'serviceagent')
 }
